# hexapod

./: .gitignore  BLUETOOTH_CLASSIC_PROTOCOL.md  COMMIT_SUMMARY.md  CONFIGURATION_IMPLEMENTATION_SUMMARY.md  CONFIGURATION_PERSISTENCE_DESIGN.md  CONFIGURATION_SYSTEM.md  CONFIG_MANAGER_REFACTOR_PLAN.md  CONTROLLER_DRIVERS.md  JOINT_CALIBRATION_IMPLEMENTATION.md  KPP_IMPLEMENTATION_PLAN.md  README.md  RPC_SYSTEM_DESIGN.md  RPC_USER_GUIDE.md  TODO.md  WIFI_TCP_PROTOCOL.md  partitions.csv  sdkconfig
components/config_core/: CMakeLists.txt
components/config_core/src/: access_api.c  manager.c
components/config_ns_joint_cal/: CMakeLists.txt
components/config_ns_system/: CMakeLists.txt
hardware/: hexapod.kicad_pcb  hexapod.kicad_pro  hexapod.kicad_sch
main/: CMakeLists.txt  config_manager.c  config_manager.h  controller.c  controller.h  controller_bt_classic.c  controller_bt_classic.h  controller_flysky_ibus.c  controller_internal.h  controller_wifi_tcp.c  controller_wifi_tcp.h  gait_scheduler.c  kpp_config.h  kpp_debug.c  kpp_debug.h  kpp_system.c  leg.c  leg.h  leg_debugger.c  leg_debugger.h  main.c  mcpwm_servo_control_example_main.c  robot_config.c  robot_config.h  robot_config_fat.c  robot_config_fat.h  robot_constants.h  robot_control.c  robot_control.h  rpc_commands.c  rpc_commands.h  rpc_transport.h  swing_trajectory.c  swing_trajectory.h  user_command.c  user_command.h  whole_body_control.c  whole_body_control.h  wifi_ap.c
main/types/: joint_types.h
plans/: CONFIG_REFACTOR_NEXT_STEPS.md  SCHEDULED_CHANGES_REVIEW.md
(+11 files in other folders)
